--- a/source-css/cloudchasermotes.css
+++ b/source-css/cloudchasermotes.css
@@ -553,6 +553,15 @@ height:180px;
 background-repeat:no-repeat;
 background-image:url(%%ccdash2%%);
 }
+
+a[href|="/fillycc"] {
+float:left;
+width:160px;
+height:119px;
+background-repeat:no-repeat;
+background-image:url(%%fillycc%%);
+}
+
 /*un-assigned end*/
 
 a.author[href$="LunarMist2"] {  
