--- a/source-css/hugemotes.css
+++ b/source-css/hugemotes.css
@@ -75,6 +75,10 @@ a[href|="/masterraceotp"], a[href|="/fluttertwihug"], a[href|="/flutterrosecuddl
 a[href|="/lyrabonkiss"], a[href|="/pinkapinkkiss"], a[href|="/pinkiedashkiss"], a[href|="/raritwikiss"], a[href|="/rainbowfirekiss"], a[href|="/twixiekiss"], a[href|="/flutterpiehug"], a[href|="/flutterlyrakiss"], a[href|="/lyrabonmilkshake"]
 {background-image:url(%%misfits4a%%);display:block;float:left;}
 
+/* Misfits 5 a */
+a[href|="/raritypiebrush"], a[href|="/berrygrouphug"], a[href|="/raritavikiss"], a[href|="/raripiesnuzzle"], a[href|="/rarilunasleep"], a[href|="/flutterraresnuzzle"], a[href|="/ararefluttermachug"]
+{background-image:url(%%misfits5a%%);display:block;float:left;}
+
 /* Animated Emotes */
 
 /* Misfit Emotes */
@@ -117,3 +121,10 @@ a[href|="/twixiekiss"] {width:250px;height:163px;background-position: -250px -33
 a[href|="/flutterpiehug"] {width:250px;height:197px;background-position: 0px -484px;}
 a[href|="/flutterlyrakiss"] {width:250px;height:158px;background-position: -250px -495px;}
 a[href|="/lyrabonmilkshake"] {width:374px; height:200px; background-position: 0px -681px; margin-bottom: -41px; position:relative; z-index: 9999999999999999999}
+a[href|="/raritypiebrush"] {width:250px;height:192px;}
+a[href|="/berrygrouphug"] {width:250px;height:194px;background-position: -250px 0px;}
+a[href|="/raritavikiss"] {width:250px;height:165px;background-position: 0px -193px;}
+a[href|="/raripiesnuzzle"] {width:250px;height:206px;background-position: -250px -194px;}
+a[href|="/rarilunasleep"] {width:250px;height:186px;background-position: 0px -358px;}
+a[href|="/flutterraresnuzzle"] {width:250px;height:165px;background-position: -250px -400px;}
+a[href|="/ararefluttermachug"] {width:288px;height:160px;background-position: 0px -565px;}
