--- a/source-css/marmemotes.css
+++ b/source-css/marmemotes.css
@@ -1948,6 +1948,7 @@ a[href|="/msprainbow"],
 a[href|="/rgbow"],
 a[href|="/mspfluttershy"],
 a[href|="/mspapplejack"],
+a[href|="/derpcord"],
 a[href|="/msppinkie"],
 a[href|="/mspberry"],
 a[href|="/mspcelestia"],
@@ -1991,6 +1992,11 @@ a[href|="/mspapplejack"]
 {
 	width: 71px;
 	background-position: -380px -0px;
+}
+a[href|="/derpcord"]
+{
+	width: 115px;
+	background-position: -451px -0px;
 }
 a[href|="/msppinkie"]
 {
