--- a/source-css/mylittlepony.css
+++ b/source-css/mylittlepony.css
@@ -227,8 +227,7 @@ border-top-right-radius: 5px;
 /*.sidecontentbox a.author.id-t2_55ojn:before {content:"Rainbow Brite"}*/
 .sidecontentbox a.author.id-t2_4f80o:before {content:"Opti"}
 .sidecontentbox a.author.id-t2_5agom:before {content:"Chinchy-bon"}
-.sidecontentbox a.author.id-t2_51isb:before {content:"Trixie Heartstrings"}
-.sidecontentbox a.author.id-t2_51isb:after {content:" (married to the pwetty chinchess)"; font-size:8px; padding-left:10px;}
+.sidecontentbox a.author.id-t2_51isb:before {content:"TrixieOf_Trixtegtrixie"}
 .sidecontentbox a.author.id-t2_5eqe2:before {content:"Pathogen-David Hasselhoff"}
 .sidecontentbox a.author.id-t2_3fvpf:before {content:"The Velour Frog"}
 .sidecontentbox a.author.id-t2_6uo3t:before {content:"spokesthephony"}
