--- a/source-css/ponymotes.css
+++ b/source-css/ponymotes.css
@@ -344,15 +344,19 @@ a[href|="/apathiasquint"], a[href|="/rdohyeah"], a[href|="/rainbowstache"], a[hr
 {background-image:url(%%70x70a%%);width:70px;height:70px;display:block;float:left;}
 
 /* 100x100a 'motes. */
-a[href|="/cadface"], a[href|="/apathiablankstare"], a[href|="/twicider"], a[href|="/nomakeup"], a[href|="/twiscepter"], a[href|="/twisceptre"], a[href|="/winona"], a[href|="/lunahmm"], a[href|="/scootexcited"], a[href|="/fluttereyebrow"], a[href|="/smugcolgate"], a[href|="/trixielecture"], a[href|="/ajdur"], a[href|="/sadshy"], a[href|="/ajdoubt"], a[href|="/discoin"], a[href|="/twidoubt"], a[href|="/ppdoubt"], a[href|="/raridoubt"], a[href|="/flutterdoubt"], a[href|="/dashdoubt"], a[href|="/deviousmac"]
+a[href|="/cadface"], a[href|="/apathiablankstare"], a[href|="/twicider"], a[href|="/nomakeup"], a[href|="/twiscepter"], a[href|="/twisceptre"], a[href|="/winona"], a[href|="/lunahmm"], a[href|="/scootexcited"], a[href|="/fluttereyebrow"], a[href|="/smugcolgate"], a[href|="/trixielecture"], a[href|="/ajdur"], a[href|="/sadshy"], a[href|="/ajdoubt"], a[href|="/discoin"], a[href|="/twidoubt"], a[href|="/ppdoubt"], a[href|="/raridoubt"], a[href|="/flutterdoubt"], a[href|="/dashdoubt"], a[href|="/deviousmac"], a[href|="/zerofucks"], a[href|="/pinkiestare"], a[href|="/shibetwi"], a[href|="/wowsocane"], a[href|="/shibelyra"], a[href|="/shibemena"], a[href|="/shibepie"], a[href|="/shibeluna"], a[href|="/shibederp"], a[href|="/shibeshy"], a[href|="/appleshibe"], a[href|="/shibedash"], a[href|="/rarishibe"]
 {background-image:url(%%100x100a%%);width:100px;height:100px;display:block;float:left;}
+
+/* 100x100b 'motes */
+a[href|="/rarityparanoid"], a[href|="/rarinoid"]
+{background-image:url(%%100x100b%%);width:100px;height:100px;display:block;float:left;}
 
 /* 150x150a 'motes. */
 a[href|="/tuxpony"], a[href|="/chibiluna"], a[href|="/shiningcadancehug"], a[href|="/twihappycry"], a[href|="/properbudget"], a[href|="/celestiaglee"], a[href|="/frittergasp"], a[href|="/twiimbetterthanyou"], a[href|="/twimbetterthanyou"], a[href|="/bonboudicca"], a[href|="/celticbonbon"], a[href|="/whatatwist"], a[href|="/rdsquishyface"], a[href|="/soveryawesome"], a[href|="/rdsmirk"], a[href|="/cheekydash"], a[href|="/sombrarage"], a[href|="/gildaconfused"], a[href|="/rarityspy"], a[href|="/twilightyay"], a[href|="/tiadisapproval"]
 {background-image:url(%%150x150a%%);width:150px;height:150px;display:block;float:left;}
 
 /* 150x150b 'motes. */
-a[href|="/flutterbatscowl"], a[href|="/ppduckface"], a[href|="/duckfaceselfie"], a[href|="/libwawy"], a[href|="/ohgoditstoocute"], a[href|="/derpyshrug"], a[href|="/gravestone"], a[href|="/theydied"]
+a[href|="/flutterbatscowl"], a[href|="/ppduckface"], a[href|="/duckfaceselfie"], a[href|="/libwawy"], a[href|="/ohgoditstoocute"], a[href|="/derpyshrug"], a[href|="/gravestone"], a[href|="/theydied"], a[href|="/rarihick"]
 {background-image:url(%%150x150b%%);width:150px;height:150px;display:block;float:left;}
 
 /* 200x200a 'motes. */
@@ -381,11 +385,11 @@ a[href|="/twitiger"], a[href|="/twiger"], a[href|="/tanktwi"], a[href|="/lunacel
 {background-image:url(%%misfitsc%%);display:block;float:left;}
 
 /* Misfits d */
-a[href|="/sonavinyl"], a[href|="/pinkierage"], a[href|="/pinkrage"], a[href|="/lunadashkiss"], a[href|="/deathdudeandmeerkat"], a[href|="/readingrainbow"], a[href|="/sbnice"], a[href|="/absolutelynice"], a[href|="/bighead"], a[href|="/imustgomypeopleneedme"]
+a[href|="/sonavinyl"], a[href|="/pinkierage"], a[href|="/pinkrage"], a[href|="/lunadashkiss"], a[href|="/deathdudeandmeerkat"], a[href|="/readingrainbow"], a[href|="/sbnice"], a[href|="/absolutelynice"], a[href|="/bighead"], a[href|="/imustgomypeopleneedme"], a[href|="/swootiaraspoonbloom"], a[href|="/whathassciencedone"], a[href|="/bitchplease"], a[href|="/roseluckstretch"]
 {background-image:url(%%misfitsd%%);display:block;float:left;}
 
 /* Grid pos 0,0 'motes. Not needed but for completeness... */
-a[href|="/cadface"], a[href|="/pinkieplease"], a[href|="/regret"], a[href|="/apathiasquint"], a[href|="/tuxpony"], a[href|="/karmashark"], a[href|="/jumptheshark"], a[href|="/flutterbatscowl"]
+a[href|="/cadface"], a[href|="/pinkieplease"], a[href|="/regret"], a[href|="/apathiasquint"], a[href|="/tuxpony"], a[href|="/karmashark"], a[href|="/jumptheshark"], a[href|="/flutterbatscowl"], a[href|="/rarityparanoid"], a[href|="/rarinoid"]
 {background-position: 0 0;}
 
 /* Grid pos 1,0 'motes */
@@ -405,7 +409,7 @@ a[href|="/properbudget"], a[href|="/twiscepter"], a[href|="/twisceptre"], a[href
 {background-position: -100% -100%;}
 
 /* Grid pos 2,1 'motes */
-a[href|="/celestiaglee"], a[href|="/winona"], a[href|="/aloe"], a[href|="/princessfluttershy"]
+a[href|="/celestiaglee"], a[href|="/winona"], a[href|="/aloe"], a[href|="/princessfluttershy"], a[href|="/rarihick"]
 {background-position: -200% -100%;}
 
 /* Grid pos 0,2 'motes */
@@ -469,6 +473,58 @@ a[href|="/dashdoubt"]
 /* Grid pos 2,6 'motes */
 a[href|="/deviousmac"]
 {background-position: -200% -600%;}
+
+/* Grid pos 0,7 'motes */
+a[href|="/zerofucks"]
+{background-position: 0 -700%;}
+
+/* Grid pos 1,7 'motes */
+a[href|="/pinkiestare"]
+{background-position: -100% -700%;}
+
+/* Grid pos 2,7 'motes */
+a[href|="/shibetwi"]
+{background-position: -200% -700%;}
+
+/* Grid pos 0,8 'motes */
+a[href|="/wowsocane"]
+{background-position: -0% -800%;}
+
+/* Grid pos 1,8 'motes */
+a[href|="/shibelyra"]
+{background-position: -100% -800%;}
+
+/* Grid pos 2,8 'motes */
+a[href|="/shibemena"]
+{background-position: -200% -800%;}
+
+/* Grid pos 0,9 'motes */
+a[href|="/shibepie"]
+{background-position: -0% -900%;}
+
+/* Grid pos 1,9 'motes */
+a[href|="/shibeluna"]
+{background-position: -100% -900%;}
+
+/* Grid pos 2,9 'motes */
+a[href|="/shibederp"]
+{background-position: -200% -900%;}
+
+/* Grid pos 0,10 'motes */
+a[href|="/shibeshy"]
+{background-position: -0% -1000%;}
+
+/* Grid pos 1,10 'motes */
+a[href|="/appleshibe"]
+{background-position: -100% -1000%;}
+
+/* Grid pos 2,10 'motes */
+a[href|="/shibedash"]
+{background-position: -200% -1000%;}
+
+/* Grid pos 0,11 'motes */
+a[href|="/rarishibe"]
+{background-position: -0% -1100%;}
 
 /* Text Emotes */
 a[href|="/gravestone"] em, a[href|="/theydied"] em
@@ -564,3 +620,6 @@ a[href|="/lunadashkiss"], a[href|="/deathdudeandmeerkat"] {width:300px;height:15
 a[href|="/readingrainbow"] {width:177px;height:250px;background-position: -823px 0;}
 a[href|="/sbnice"], a[href|="/absolutelynice"] {width:300px;height:192px;background-position: 0 -235px;}
 a[href|="/bighead"], a[href|="/imustgomypeopleneedme"] {width:123px;height:196px;background-position: -300px -167px;}
+a[href|="/swootiaraspoonbloom"], a[href|="/whathassciencedone"] {width:120px;height:150px;background-position: -423px -167px;}
+a[href|="/bitchplease"] {width:79px;height:100px;background-position: -544px -153px;}
+a[href|="/roseluckstretch"] {width:200px;height:145px;background-position: -622px -152px;}
