--- a/source-css/twiquisition.css
+++ b/source-css/twiquisition.css
@@ -78,14 +78,6 @@ width: 220px;
 height: 343px;
 background-image: url(%%twitongue%%);
 }
-a[href|="/8bitsombra"] {
-display: block;
-clear: none;
-float: left;
-width: 256px;
-height: 376px;
-background-image: url(%%8bitsombra%%);
-}
 a[href|="/assrub"] {
 display: block;
 clear: none;
@@ -309,6 +301,14 @@ float: left;
 width: 162px;
 height: 250px;
 background-image: url(%%twihomer%%);
+}
+a[href|="/heretic"] {
+display: block;
+clear: none;
+float: left;
+width: 484px;
+height: 466px;
+background-image: url(%%heretic%%);
 }
 .subscribers .word {
 display: none;
