--- a/source-css/mlplounge.css
+++ b/source-css/mlplounge.css
@@ -171,7 +171,7 @@ div.over18 .entry .buttons .first{padding-left: 0px}
  text-align:center;
  width:100%;
 /*Footer image by DestinyProgenitor on Deviant Art*/
- background-image:url(%%cadavia%%);
+ background-image:url(%%twistfooter%%);
  background-repeat:no-repeat;
  margin-bottom:-80px;
  background-position: 50% 100%;
@@ -198,15 +198,15 @@ h3.imgTitle{
 .side a[href="/r/MLPLounge/new/"]
 {
  display:block;
- width:80px;
- height:121px;
- background:url(%%discordfilly%%);
+ width:72px;
+ height:90px;
+ background:url(%%ccfilly%%);
  position:fixed; 
  top:260px;
  right:-5px;
  z-index:999
 }
-body{background:url(%%tavixcc%%) no-repeat fixed center center}
+body{background:url(%%sbstarebackground%%) no-repeat fixed center center}
 .content .md h1{color:#789922;border-bottom:none;padding-bottom:0px}
 .content .md h1:before{content:">"}
 /*New post spam filtered warning*/
