--- a/source-css/marmemotes.css
+++ b/source-css/marmemotes.css
@@ -1954,10 +1954,12 @@ a[href|="/mspberry"],
 a[href|="/mspcelestia"],
 a[href|="/princesscelery"],
 a[href|="/mspluna"],
+a[href|="/mrharshcades"],
 a[href|="/mspsweetie"],
 a[href|="/mspscootaloo"],
 a[href|="/mspapplebloom"],
 a[href|="/keytarsolo"],
+a[href|="/o_o"],
 a[href|="/yuubutts"],
 a[href|="/teiyourenaked"]
 {
@@ -2019,6 +2021,11 @@ a[href|="/mspluna"]
 	width: 106px;
 	background-position: -311px -140px;
 }
+a[href|="/mrharshcades"]
+{
+	width: 129px;
+	background-position: -417px -140px;
+}
 a[href|="/mspsweetie"]
 {
 	width: 126px;
@@ -2038,6 +2045,11 @@ a[href|="/keytarsolo"]
 {
 	width: 116px;
 	background-position: -265px -280px;
+}
+a[href|="/o_o"]
+{
+	width: 103px;
+	background-position: -381px -280px;
 }
 a[href|="/yuubutts"]
 {
