--- a/source-css/ponymotes.css
+++ b/source-css/ponymotes.css
@@ -348,7 +348,7 @@ a[href|="/cadface"], a[href|="/apathiablankstare"], a[href|="/twicider"], a[href
 {background-image:url(%%100x100a%%);width:100px;height:100px;display:block;float:left;}
 
 /* 100x100b 'motes */
-a[href|="/rarityparanoid"], a[href|="/rarinoid"]
+a[href|="/rarityparanoid"], a[href|="/rarinoid"], a[href|="/flutterfreaked"], a[href|="/applewat"]
 {background-image:url(%%100x100b%%);width:100px;height:100px;display:block;float:left;}
 
 /* 150x150a 'motes. */
@@ -356,7 +356,7 @@ a[href|="/tuxpony"], a[href|="/chibiluna"], a[href|="/shiningcadancehug"], a[hre
 {background-image:url(%%150x150a%%);width:150px;height:150px;display:block;float:left;}
 
 /* 150x150b 'motes. */
-a[href|="/flutterbatscowl"], a[href|="/ppduckface"], a[href|="/duckfaceselfie"], a[href|="/libwawy"], a[href|="/ohgoditstoocute"], a[href|="/derpyshrug"], a[href|="/gravestone"], a[href|="/theydied"], a[href|="/rarihick"]
+a[href|="/flutterbatscowl"], a[href|="/ppduckface"], a[href|="/duckfaceselfie"], a[href|="/libwawy"], a[href|="/ohgoditstoocute"], a[href|="/derpyshrug"], a[href|="/gravestone"], a[href|="/theydied"], a[href|="/rarihick"], a[href|="/fshide"]
 {background-image:url(%%150x150b%%);width:150px;height:150px;display:block;float:left;}
 
 /* 200x200a 'motes. */
@@ -385,7 +385,7 @@ a[href|="/twitiger"], a[href|="/twiger"], a[href|="/tanktwi"], a[href|="/lunacel
 {background-image:url(%%misfitsc%%);display:block;float:left;}
 
 /* Misfits d */
-a[href|="/sonavinyl"], a[href|="/pinkierage"], a[href|="/pinkrage"], a[href|="/lunadashkiss"], a[href|="/deathdudeandmeerkat"], a[href|="/readingrainbow"], a[href|="/sbnice"], a[href|="/absolutelynice"], a[href|="/bighead"], a[href|="/imustgomypeopleneedme"], a[href|="/swootiaraspoonbloom"], a[href|="/whathassciencedone"], a[href|="/bitchplease"], a[href|="/roseluckstretch"]
+a[href|="/sonavinyl"], a[href|="/pinkierage"], a[href|="/pinkrage"], a[href|="/lunadashkiss"], a[href|="/deathdudeandmeerkat"], a[href|="/readingrainbow"], a[href|="/sbnice"], a[href|="/absolutelynice"], a[href|="/bighead"], a[href|="/imustgomypeopleneedme"], a[href|="/swootiaraspoonbloom"], a[href|="/whathassciencedone"], a[href|="/bitchplease"], a[href|="/roseluckstretch"], a[href|="/woonacape"], a[href|="/radiance"], a[href|="/oldenmw"], a[href|="/sheiscorrect"], a[href|="/over9000"]
 {background-image:url(%%misfitsd%%);display:block;float:left;}
 
 /* Grid pos 0,0 'motes. Not needed but for completeness... */
@@ -393,11 +393,11 @@ a[href|="/cadface"], a[href|="/pinkieplease"], a[href|="/regret"], a[href|="/apa
 {background-position: 0 0;}
 
 /* Grid pos 1,0 'motes */
-a[href|="/twispike"], a[href|="/pinkiemail"], a[href|="/chibiluna"], a[href|="/apathiablankstare"], a[href|="/rdohyeah"], a[href|="/ppduckface"], a[href|="/duckfaceselfie"]
+a[href|="/twispike"], a[href|="/pinkiemail"], a[href|="/chibiluna"], a[href|="/apathiablankstare"], a[href|="/rdohyeah"], a[href|="/ppduckface"], a[href|="/duckfaceselfie"], a[href|="/flutterfreaked"]
 {background-position: -100% 0%;}
 
 /* Grid pos 2,0 'motes */
-a[href|="/shiningcadancehug"], a[href|="/obsessivetrixie"], a[href|="/trixiebeingcreepy"], a[href|="/twicider"], a[href|="/rainbowstache"], a[href|="/sparklelove"], a[href|="/libwawy"], a[href|="/ohgoditstoocute"]
+a[href|="/shiningcadancehug"], a[href|="/obsessivetrixie"], a[href|="/trixiebeingcreepy"], a[href|="/twicider"], a[href|="/rainbowstache"], a[href|="/sparklelove"], a[href|="/libwawy"], a[href|="/ohgoditstoocute"], a[href|="/applewat"]
 {background-position: -200% 0%;}
 
 /* Grid pos 0,1 'motes */
@@ -413,7 +413,7 @@ a[href|="/celestiaglee"], a[href|="/winona"], a[href|="/aloe"], a[href|="/prince
 {background-position: -200% -100%;}
 
 /* Grid pos 0,2 'motes */
-a[href|="/frittergasp"], a[href|="/ohyeah"], a[href|="/lunahmm"], a[href|="/pinkpyro"]
+a[href|="/frittergasp"], a[href|="/ohyeah"], a[href|="/lunahmm"], a[href|="/pinkpyro"], a[href|="/fshide"]
 {background-position: 0 -200%;}
 
 /* Grid pos 1,2 'motes */
@@ -569,6 +569,7 @@ a[href|="/crazytwi"] {background-image: url(%%crazytwi%%);width:130px;height:150
 a[href|="/applebrow"] {background-image: url(%%applebrow%%);width:100px;height:90px;display:block;float:left;}
 a[href|="/downvotingpony"] {background-image: url(%%downvotingpony%%);width:230px;height:185px;display:block;float:left;}
 a[href|="/raribrows"] {background-image: url(%%raribrows%%);width:122px;height:110px;display:block;float:left;}
+a[href|="/cmccovet"] {background-image: url(%%cmccovet%%);width:150px;height:108px;display:block;float:left;}
 
 /* Misfit Emotes */
 a[href|="/fillycadance"] {width:100px;height:126px;}
@@ -623,3 +624,7 @@ a[href|="/bighead"], a[href|="/imustgomypeopleneedme"] {width:123px;height:196px
 a[href|="/swootiaraspoonbloom"], a[href|="/whathassciencedone"] {width:120px;height:150px;background-position: -423px -167px;}
 a[href|="/bitchplease"] {width:79px;height:100px;background-position: -544px -153px;}
 a[href|="/roseluckstretch"] {width:200px;height:145px;background-position: -622px -152px;}
+a[href|="/woonacape"] {width:125px;height:200px;background-position: -300px -363px;}
+a[href|="/radiance"], a[href|="/oldenmw"] {width:163px;height:200px;background-position: -425px -317px;}
+a[href|="/sheiscorrect"] {width:140px;height:200px;background-position: -588px -297px;}
+a[href|="/over9000"] {width:150px;height:269px;background-position: -850px -250px;}
