--- a/source-css/scratchquisition.css
+++ b/source-css/scratchquisition.css
@@ -360,3 +360,24 @@ a[href|="/vsguns"]
     width: 173px;
     height: 170px;
 }
+
+
+a[href|="/helixfossil"] 
+{
+ background-image: url(%%helixfossil%%);
+    clear: none;
+    display: block;
+    float: left;
+    width: 87px;
+    height: 90px;
+}
+
+a[href|="/domefossil"] 
+{
+ background-image: url(%%domefossil%%);
+    clear: none;
+    display: block;
+    float: left;
+    width: 87px;
+    height: 90px;
+}
