--- a/source-css/taviquisition.css
+++ b/source-css/taviquisition.css
@@ -1829,6 +1829,14 @@ a[href|="/daisy"] {
  background-image: url(%%daisy%%);
 } 
 
+a[href|="/daisyready"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 159px;
+ height: 195px;
+ background-image: url(%%daisyready%%);
+} 
 
 a[href|="/thisistoocute"] {  
  display: block;
