--- a/source-css/trixquisition.css
+++ b/source-css/trixquisition.css
@@ -23,7 +23,7 @@ background-color:aliceblue;
 
 /*70px emotes*/
 
-a[href|="/trixiedevious"], a[href|="/moi?"], a[href|="/trixieoh"], a[href|="/lustystare"], a[href|="/smugsmile"]
+a[href|="/trixiedevious"], a[href|="/moi"], a[href|="/trixieoh"], a[href|="/lustystare"], a[href|="/smugsmile"]
 {
   display: block;
   clear: none;
@@ -36,14 +36,14 @@ a[href|="/trixiedevious"], a[href|="/moi?"], a[href|="/trixieoh"], a[href|="/lus
 /*offsets*/
 
 a[href|="/trixiedevious"] {background-position:-0px -0px}
-a[href|="/moi?"]          {background-position:-70px -0px}
+a[href|="/moi"]           {background-position:-70px -0px}
 a[href|="/trixieoh"]      {background-position:-140px -0px}
 a[href|="/lustystare"]    {background-position:-210px -0px}
 a[href|="/smugsmile"]     {background-position:-280px -0px}
 
 /*200px emotes*/
 
-a[href|="/notamusedtrixie"], a[href|="/wasthereeveranydoubt"], a[href|="/trixiesocks"]
+a[href|="/notamusedtrixie"], a[href|="/wasthereeveranydoubt"], a[href|="/trixiesocks"], a[href|="/Trixiewillreku"]
 {
   display: block;
   clear: none;
@@ -58,6 +58,7 @@ a[href|="/notamusedtrixie"], a[href|="/wasthereeveranydoubt"], a[href|="/trixies
 a[href|="/notamusedtrixie"]      {background-position: -0px -0px}
 a[href|="/wasthereeveranydoubt"] {background-position: -200px -0px}
 a[href|="/trixiesocks"]          {background-position: -400px -0px}
+a[href|="/Trixiewillreku"]       {background-position: -600px -0px}
 
 /*heterogeneous emotes*/
 
