--- a/source-css/vinylscratch.css
+++ b/source-css/vinylscratch.css
@@ -306,7 +306,7 @@ img#header-img{
     }
 /* Catches all <a> */
 .titlebox .usertext-body .md h6 a:before {
-    content: "ANNOUNCEMENT";
+    content: "BREAKING NEWS";
     color: firebrick;
     border-right: 1px solid #444;
     padding-right: .6em;
@@ -1074,7 +1074,7 @@ a.author[href$="bryvood"]:before {content:"DJ Toaster Scratchaloo"}
 a.author[href$="otwem"]:before {content:"Otwem Scratch"}
 a.author[href$="Kireas"]:before {content:"Octavia"}
 a.author[href$="Nephrited"]:before {content:"Octavia"}
-a.author[href$="AlisterDX"]:before {content:"Homage"}
+a.author[href$="AlisterDX"]:before {content:"Star"}
 a.author[href$="upvote_machine_1"]:before {content:"MrJoker7854"}
 a.author[href$="Harakou"]:before {content:"Taco OIA"}
 a.author[href$="nightpony"]:before {content:"DJ NightPon3"}
